@@ -1,3 +1,11 @@
+Mon May  2 23:03:42 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c, include/ruby/win32.h (rb_w32_utruncate): implements new
+	  truncate alternative which accepts UTF-8 path.
+
+	* file.c (truncate): use above function.
+	  [Bug #12340]
+
 Mon May  2 20:59:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* re.c (str_coderange): to avoid function call when the string already
